# led-dome

./: CMakeLists.txt  CMakeSettings.json  LEDControl69.cpp  README.md  e131_packet.cpp  e131_packet.h  ledcal69 - fulldome.txt  ledcal69.txt  ledcal69_clean.txt  ledcal69_familyreunion.txt  ledcontrol.cpp  ledcontrol.h  main.cpp  udpclient.h  udpsend.cpp  udpsend_windows.cpp  udpsend_windows.h
Graphics/: DomeViewer.cpp  DomeViewer.h  render.cpp  render.h
LEDControl69/: CMakeLists.txt  LEDControl69.cpp  LEDControl69.h  donotusecal.txt
LEDControl69/Graphics/: DomeViewer.cpp  DomeViewer.h  graphics_test.cpp  graphics_test.h
LEDControl69/Networking/: DomeServer.cpp  DomeServer.h  e131_packet.cpp  ledcontrol.cpp  ledcontrol_tests.cpp
LEDControl69/Objects/: LLnode.cpp  LLnode.h  graph.cpp  graph.h  led.cpp  led.h  node.cpp  strut.cpp  strut.h
LEDControl69/PatternsPlus/: helpers.cpp  helpers.h  ledengine.cpp  ledengine.h  pattern.cpp  positioning.h  shared.cpp  shared.h  vectormath.h
Networking/: ADDRESS_CONFIG.h  e131_packet.cpp  e131_packet.h  ledcontrol.cpp  ledcontrol.h  ledcontrol_tests.cpp  ledcontrol_tests.h  udpsend_windows.cpp  udpsend_windows.h
Objects/: LLnode.cpp  LLnode.h  dome.cpp  dome.h  graph.cpp  graph.h  led.cpp  led.h  node.cpp  node.h  strut.cpp  strut.h
PatternsPlus/: EffectEngine.cpp  EffectEngine.h  LEDInterface.h  color_structs.h  helpers.cpp  helpers.h  ledengine.cpp  ledengine.h  mapping.cpp  mapping.h  pattern.cpp  pattern.h  positioning.h  shared.cpp  shared.h  vectormath.cpp  vectormath.h
PatternsPlus/Effects/: Blink.h  Effect.cpp  (+25 more)
(+71 files in other folders)
